--- a/Com.MarcusTS.ResponsiveTasks.nuspec
+++ b/Com.MarcusTS.ResponsiveTasks.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Com.MarcusTS.ResponsiveTasks</id>
-    <version>1.0.21</version>
+    <version>2.0.1</version>
     <title>Responsive Tasks</title>
     <authors>Stephen Marcus</authors>
     <owners>Marcus Technical Services, Inc.</owners>
@@ -13,7 +13,7 @@
     </description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2021 Marcus Technical Services, Inc. (https://www.marcusts.com)</copyright>
-    <tags>events, tasks, xamarin-forms xamarin-forms-utilities xamarin-forms-components, responsive-tasks tpl tpl-fixes await-async await-async fixes</tags>
+    <tags>events, tasks, xamarin-forms xamarin-forms-utilities xamarin-forms-components, responsive-tasks tpl tpl-fixes await-async await-async fixes maui</tags>
     <readme>docs\README.md</readme>
   </metadata>
   <files>
